# godwoken-web3

./: .dockerignore  .eslintrc.js  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  package.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker-publish-indexer.yml  docker-publish.yml  godwoken-tests.yml  node.js.yml  rust.yml  unit-tests.yml
crates/indexer/: Cargo.toml
crates/indexer/migrations/: 20210420113522_create_logs.sql  20220427095638_add_exit_code_to_transactions.sql
crates/indexer/src/: config.rs  error.rs  error_receipt_indexer.rs  helper.rs  indexer.rs  insert_l2_block.rs  lib.rs  main.rs  pool.rs  runner.rs  types.rs  ws_client.rs  ws_output.rs
crates/rpc-client/: Cargo.toml
crates/rpc-client/src/: error.rs  godwoken_rpc_client.rs  lib.rs
docker/indexer/: Dockerfile
docs/: addtional-feature.md  apis.md  compatibility.md  poly-apis.md  schema_design.md
docs/cases/: eth_getBlock.json  eth_getTransaction.json  eth_getTransactionReceipt.json  eth_getTransactionReceipt_with_logs.json
scripts/: generate-indexer-config.js
