[package]
name = "gw-web3-rpc-client"
version = "0.1.0"
authors = ["Nervos Network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
ckb-jsonrpc-types = "0.100.0"
ckb-types = "0.100.0"
gw-jsonrpc-types = { git = "https://github.com/jjyr/godwoken.git", rev = "66f6621fc1143161e832c649f543ebc4b3004e8d" }
gw-types = { git = "https://github.com/jjyr/godwoken.git", rev = "66f6621fc1143161e832c649f543ebc4b3004e8d" }
gw-common = { git = "https://github.com/jjyr/godwoken.git", rev = "66f6621fc1143161e832c649f543ebc4b3004e8d" }
jsonrpc-core = "17"
rand = "0.8"
anyhow = "1.0"
