[package]
name = "gw-web3-rpc-client"
version = "0.1.0"
authors = ["Nervos Network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
ckb-jsonrpc-types = "0.100.0"
ckb-types = "0.100.0"
gw-jsonrpc-types = { git = "https://github.com/nervosnetwork/godwoken.git", rev = "d4cc2a8d6b6b20577ea6e6df1496eba191df6dc6" }
gw-types = { git = "https://github.com/nervosnetwork/godwoken.git", rev = "d4cc2a8d6b6b20577ea6e6df1496eba191df6dc6" }
gw-common = { git = "https://github.com/nervosnetwork/godwoken.git", rev = "d4cc2a8d6b6b20577ea6e6df1496eba191df6dc6" }
jsonrpc-core = "17"
rand = "0.8"
anyhow = "1.0"
