[package]
name = "gw-web3-rpc-client"
version = "0.1.0"
authors = ["Nervos Network"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
ckb-jsonrpc-types = "0.100.0"
ckb-types = "0.100.0"
gw-jsonrpc-types = { git = "https://github.com/jjyr/godwoken.git", rev = "f01923a39d0947d386dda191ba63cdccf830c2b5" }
gw-types = { git = "https://github.com/jjyr/godwoken.git", rev = "f01923a39d0947d386dda191ba63cdccf830c2b5" }
gw-common = { git = "https://github.com/jjyr/godwoken.git", rev = "f01923a39d0947d386dda191ba63cdccf830c2b5" }
jsonrpc-core = "17"
rand = "0.8"
anyhow = "1.0"
